--- a/CONFIG/dataescuela.html
+++ b/CONFIG/dataescuela.html
@@ -48,13 +48,16 @@
 
             </div>
             <a class="nav-link active text-center mb-1 fs-5" aria-current="page" data-bs-toggle="collapse"
-            href="#menu"><i class="bi bi-list"></i></a>
+                href="#menu"><i class="bi bi-list"></i></a>
         </div>
         <a href="#" onclick="SignOut()">Salir</a>
     </div>
 
-    <div id="panel_escritorio" class="content p-2">
+    <div class="content p-2">
         <div id="Nombre_proyecto" class="fw-bold fs-4 text-center"></div>
+        <div id="panel_escritorio" class="m-2">
+
+        </div>
     </div>
 
 </body>
