--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/toastify-js"></script>
 
     <!-- Cargar scripts -->
-    <link rel="stylesheet" href="/style.css">
+    <link rel="stylesheet" href="./style.css">
 
     <script defer src="./CONFIG/data-admin.js" type="module"></script>
     <script src="./CONFIG/global-var.js"></script>
@@ -66,17 +66,31 @@
     </nav>
 </header>
 
-<body>
+<body class="bgimg">
     <div class="row">
         <div class="col-md-4"></div>
         <div class="col-md-4 text-center">
-            <div class="mod-ini p-3">              
-                <button type="button" class="btn btn-secondary mt-3" onclick="openweb()">Ingresar</button>
+            <div class="p-3 bg-white mt-5" style="opacity: 0.8;">
+                <div style="text-align: justify;" class="p-3">
+                    <p>
+                        Swanpatpo es una plataforma de administración de proyectos educativos
+                        no convencionales, especialmente para modelos orientados a procesos de educación
+                        propia.
+                    </p>
+                    <p>
+                        Permite la gestión de información académica, presupuestal y administrativa.
+                    </p>
+
+                </div>
+                <div class="p-3 bg-white">
+                    <div class="bg-white">
+                        <button type="button" class="btn btn-secondary" onclick="openweb()">Ingresar</button>
+                    </div>
+                </div>
             </div>
 
+
         </div>
-        <div class="col-md-4"></div>
-    </div>
 
 </body>
 
