--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 </head>
 <header id="headerMap" class="sticky-top">
     <!-- barra de menu de inicio -->
-    <nav class="navbar navbar-expand-lg bg-secondary">
+    <nav class="navbar navbar-expand-lg" style="background-color: #bb2a04ff;">
         <div class="container-fluid">
             <a class="navbar-brand text-white" href="#" hidden="true">
                 <img src="" width="40px" height="40px">
@@ -37,18 +37,14 @@
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                     <li class="nav-item" onclick="cinfigIni_data()">
-                        <a class="nav-link active text-white" href="#" data-bs-toggle="offcanvas"
-                            data-bs-target="#offcanvasConsulta" aria-controls="offcanvasConsulta">
-                            <i class="bi bi-binoculars-fill me-2"></i>
-                            Nosotros
-                        </a>
+
                     </li>
 
 
                     <li class="nav-item dropdown">
                         <a class="nav-link dropdown-toggle text-white" href="#" role="button" data-bs-toggle="dropdown"
                             aria-expanded="false">
-                            Otros datos
+                            
                         </a>
                         <ul class="dropdown-menu">
                             <li>
@@ -70,7 +66,10 @@
     <div class="row">
         <div class="col-md-4"></div>
         <div class="col-md-4 text-center">
-            <div class="p-3 bg-white mt-5" style="opacity: 0.8;">
+            <div class="p-3 text-white mt-5 h3" style="background-color: #bb2a04ff;">
+                SUWANPATPO V.1.0
+            </div>
+            <div class="p-3 bg-white mt-2" style="opacity: 0.8;">
                 <div style="text-align: justify;" class="p-3">
                     <p>
                         Swanpatpo es una plataforma de administración de proyectos educativos
@@ -82,10 +81,11 @@
                     </p>
 
                 </div>
-                <div class="p-3 bg-white">
-                    <div class="bg-white">
-                        <button type="button" class="btn btn-secondary" onclick="openweb()">Ingresar</button>
-                    </div>
+
+            </div>
+            <div class="p-3 bg-white">
+                <div class="bg-white">
+                    <button type="button" class="btn btn-secondary" onclick="openweb()">Ingresar</button>
                 </div>
             </div>
 
