update estudiantes importar

--- a/CONFIG/dataescuela.html
+++ b/CONFIG/dataescuela.html
@@ -130,5 +130,29 @@
         </div>
     </div>
 </div>
+<!-- Contenedor de formulario importar -->
+<div class="modal" id="ModalImportar">
+    <div class="modal-dialog">
+        <div class="modal-content">
+            <!-- Modal Header -->
+            <div class="modal-header">
+                <h4 class="modal-title">Administrador de datos</h4>
+                <button type="button" class="btn-close" data-bs-dismiss="modal"></button>
+            </div>
 
+            <!-- Modal body -->
+            <div class="modal-body" id="textoModalImport">
+
+            </div>
+
+            <!-- Modal footer -->
+            <div class="modal-footer">
+                <button id="btnAceptarImportar" type="button" class="btn btn-success"
+                    data-bs-dismiss="modal">Aceptar</button>
+                <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cerrar</button>
+            </div>
+
+        </div>
+    </div>
+</div>
 </html>
