--- a/CONFIG/dataescuela.html
+++ b/CONFIG/dataescuela.html
@@ -39,10 +39,10 @@
                         Escuela
                     </span>
                 </a>
-                <a href="#" onclick="run_tabla()">
+                <a href="#" id="btn_modelo">
                     <i class="fs-3 bi-table"></i>
                     <span class="ms-1 d-none d-sm-inline">
-                        Presupuestos
+                        Modelo
                     </span>
                 </a>
 
